--- a/tapper/Base.lproj/Main.storyboard
+++ b/tapper/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="tapper" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,95 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="retrobg" translatesAutoresizingMaskIntoConstraints="NO" id="Gud-Tc-ndg">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tapper" translatesAutoresizingMaskIntoConstraints="NO" id="IxM-nc-Dpo" userLabel="TitleLogo">
+                                <rect key="frame" x="140" y="59" width="320" height="67"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="320" id="SBB-dk-dh6"/>
+                                    <constraint firstAttribute="height" constant="67" id="mYE-u4-xw4"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hIi-5I-Qys" userLabel="PlayButton">
+                                <rect key="frame" x="176" y="379" width="249" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="249" id="O7H-bh-Boy"/>
+                                    <constraint firstAttribute="height" constant="120" id="zHE-18-VMG"/>
+                                </constraints>
+                                <state key="normal" image="playbtn"/>
+                                <connections>
+                                    <action selector="onPlayButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="w81-fd-6Zh"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="How many taps to win?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="671-RN-AaS">
+                                <rect key="frame" x="176" y="335" width="249" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="42y-Zz-kzk"/>
+                                    <constraint firstAttribute="width" constant="249" id="xDj-zm-2zQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s8K-wR-yb4" userLabel="CoinButton">
+                                <rect key="frame" x="186" y="37" width="228" height="205"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="205" id="KZx-KN-sca"/>
+                                    <constraint firstAttribute="width" constant="228" id="tdr-jO-99I"/>
+                                </constraints>
+                                <state key="normal" image="coin"/>
+                                <connections>
+                                    <action selector="onCoinTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qM3-dh-xIL"/>
+                                </connections>
+                            </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="100 Taps" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7TW-vZ-FIo" userLabel="Taps Label">
+                                <rect key="frame" x="184" y="304" width="233" height="81"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="233" id="2fj-c7-tMG"/>
+                                    <constraint firstAttribute="height" constant="81" id="ESK-0Z-L1R"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="42"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hIi-5I-Qys" firstAttribute="centerX" secondItem="671-RN-AaS" secondAttribute="centerX" id="4bk-vO-LCc"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Gud-Tc-ndg" secondAttribute="bottom" id="6gX-UF-PFa"/>
+                            <constraint firstItem="s8K-wR-yb4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ABK-ZN-DHe"/>
+                            <constraint firstAttribute="trailing" secondItem="Gud-Tc-ndg" secondAttribute="trailing" id="Cvw-6n-SgB"/>
+                            <constraint firstItem="7TW-vZ-FIo" firstAttribute="top" secondItem="s8K-wR-yb4" secondAttribute="bottom" constant="62" id="UCb-Qp-9jI"/>
+                            <constraint firstItem="Gud-Tc-ndg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Yin-nG-l4w"/>
+                            <constraint firstItem="hIi-5I-Qys" firstAttribute="top" secondItem="671-RN-AaS" secondAttribute="bottom" constant="14" id="aQJ-H4-I84"/>
+                            <constraint firstItem="IxM-nc-Dpo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ez2-BP-dzH"/>
+                            <constraint firstItem="7TW-vZ-FIo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="h4C-Be-HUW"/>
+                            <constraint firstItem="s8K-wR-yb4" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="18" id="hEF-vQ-eR8"/>
+                            <constraint firstItem="hIi-5I-Qys" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kBK-vv-CaH"/>
+                            <constraint firstItem="s8K-wR-yb4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rhk-vb-w3a"/>
+                            <constraint firstItem="Gud-Tc-ndg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="tWE-XF-Rcs"/>
+                            <constraint firstItem="IxM-nc-Dpo" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="39" id="uBF-lM-2z5"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="hIi-5I-Qys" secondAttribute="bottom" constant="101" id="whU-3z-vbD"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="howManyTapsTxt" destination="671-RN-AaS" id="crg-8x-WMM"/>
+                        <outlet property="playButton" destination="hIi-5I-Qys" id="Ezy-6a-ZZm"/>
+                        <outlet property="tapButton" destination="s8K-wR-yb4" id="Sa1-s4-obV"/>
+                        <outlet property="tapsLabel" destination="7TW-vZ-FIo" id="Cuw-Yi-Djx"/>
+                        <outlet property="titleLogoImg" destination="IxM-nc-Dpo" id="GSY-gC-oiA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="348" y="429"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Tapper" width="497" height="107"/>
+        <image name="coin" width="244" height="268"/>
+        <image name="playbtn" width="356" height="175"/>
+        <image name="retrobg" width="800" height="800"/>
+    </resources>
 </document>
